# StudyCore

./: README.md  pyproject.toml
client/ui/modules/: qrpopup.py
data/db/: __init__.py  add_methods.py  auth_methods.py  database.py  db_manager.py  delete_methods.py  main.py  qr_service.py  read_methods.py  update_methods.py  utils.py
server/: __init__.py  main.py
server/api/: __init__.py  key_system.py  schedule.py
server/api/access_system/: auth.py
server/api/api_v1/: __init__.py
server/core/: __init__.py  config.py  database.py  seed.py
server/crud/: __init__.py  add_methods.py  delete_methods.py  key_system.py  read_methods.py  schedule.py  update_methods.py
server/data/: school_system.db
server/data/db/: __init__.py  add_methods.py  auth_methods.py  db_manager.py  delete_methods.py  main.py  models.py  qr_service.py  read_methods.py  school_system.db  security.py  seed.py  update_methods.py
server/models/: __init__.py  attendance.py  book.py  enums.py  grade.py  group.py  homework.py  key.py  meal.py  notification.py  parent.py  qr_code.py  role.py  room.py  schedule.py  student.py  subject.py  user.py
server/schemas/: __init__.py  auth.py  enums.py  key_system.py  library.py  notification.py  qrcode.py  schedule.py  user.py
server/scripts/: __init__.py  auth_methods.py  qrcode.py  security.py  utils.py
server/scripts/access_system/: auth.py
server/src/schemas/: library.py
tests/qrcode/: qr_ui.py
tests/test_server/: conftest.py
tests/test_server/test_auth/: test_auth.py
tests/test_server/test_keysys/: test_keysys.py
(+33 files in other folders)
